--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,10 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "pymongo (>=4.10.1,<5.0.0)",
     "python-dotenv (>=1.0.1,<2.0.0)",
-    "pymongo[srv] (==3.12)",
+    "ijson (>=3.3.0,<4.0.0)",
+    "logging (>=0.4.9.6,<0.5.0.0)"
 ]
 
 
@@ -21,6 +23,6 @@ build-backend = "poetry.core.masonry.api"
 packages = [
     {include = "__init__.py"}
 ]
-[tool.poetry.group.dev.dependencies]
-ipykernel = "^6.29.5"
-
+exclude = [
+    ".venv/**",
+]
