--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,21 +8,14 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "pymongo (>=4.10.1,<5.0.0)",
+    "pymongo[srv] (==3.12)",
+    "fastapi (>=0.115.7,<0.116.0)",
+    "uvicorn[standart] (>=0.34.0,<0.35.0)",
     "python-dotenv (>=1.0.1,<2.0.0)",
     "ijson (>=3.3.0,<4.0.0)",
-    "logging (>=0.4.9.6,<0.5.0.0)"
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.poetry]
-packages = [
-    {include = "__init__.py"}
-]
-exclude = [
-    ".venv/**",
-]
