--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,12 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "pymongo[srv] (==3.12)",
-    "fastapi (>=0.115.7,<0.116.0)",
     "uvicorn[standart] (>=0.34.0,<0.35.0)",
     "python-dotenv (>=1.0.1,<2.0.0)",
     "ijson (>=3.3.0,<4.0.0)",
+    "pydantic (>=2.10.6,<3.0.0)",
+    "pymongo (>=4.11.1,<5.0.0)",
+    "fastapi[standard] (>=0.115.8,<0.116.0)",
 ]
 
 
